tests/semantic/while_err1.expected

Semantic Error [line 6]: value: "sc1_false"
	Unexpected r-value type: 
Expected type(s) 'Integer' or 'Boolean'; found 'String' instead.
