tests/semantic/while_err1.mtp
(*While statements with non-Boolean conditions*)
const false := 'false';
var a, b : integer;

begin
	while a <> false do
	      a := a + 1
	;

end.